# AIMM-ICC

./: .gitignore  .hgignore  CMakeLists.txt  README.md  basic_control.py  cmdvel_serial_bridge.py  frames.gv  motor_cmd.py  package.xml  rc_override_node.py  servo_arduino_test.py
Blink/: Blink.ino
DiffDriveBoat/: DiffDriveBoat.ino
aimm_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
aimm_gazebo/config/: Zdrive.yaml  custom_rosconsole.conf  diffdrive.yaml  front_stereo.perspective  wave_motion_plot.perspective
aimm_gazebo/config/lpv_config/: example_component_config.yaml  lpv4_component_config.yaml  lpv_thruster_config.yaml
aimm_gazebo/docs/: theory_of_operation.tex
aimm_gazebo/include/aimm_gazebo/: follow_plugin.hh  gymkhana_scoring_plugin.hh  light_buoy_plugin.hh  navigation_scoring_plugin.hh  perception_scoring_plugin.hh  placard_plugin.hh  scan_dock_scoring_plugin.hh  scoring_plugin.hh  stationkeeping_scoring_plugin.hh  wayfinding_scoring_plugin.hh  wildlife_scoring_plugin.hh
aimm_gazebo/launch/: aimm.launch  demo_thrusterconfigs.launch  generate_lpv.launch  generate_worlds.launch  gymkhana.launch  perception_task.launch  pinger.launch  playback.launch  quat2rpy.launch  scan_dock_deliver.launch  simulate_boat.launch  station_keeping.launch  sydneyregatta.launch  usv_joydrive.launch  usv_keydrive.launch  wayfinding.launch  wildlife.launch
aimm_gazebo/models/aimm_course/: model.sdf
aimm_gazebo/models/battery/: model.config
aimm_gazebo/models/cpu_cases/: model.config
aimm_gazebo/models/dock_2016/: model.sdf  model.sdf.erb
aimm_gazebo/models/dock_2016_dynamic/: model.sdf  model.sdf.erb
aimm_gazebo/models/dock_2018/: model.sdf  model.sdf.erb
aimm_gazebo/models/dock_2018_dynamic/: model.sdf  model.sdf.erb
aimm_gazebo/models/dock_2022/: model.sdf  model.sdf.erb
aimm_gazebo/nodes/: key2thrust_angle.py  pinger_visualization.py  set_pinger_position.py  twist2thrust.py
aimm_gazebo/scripts/: generate_lpv.py  generate_worlds.py  pub_geoposestamped.sh  spawn_lpv.bash
aimm_gazebo/src/: ball_shooter_plugin.cc  follow_plugin.cc  gui_task_widget.cc  gui_task_widget.hh  gymkhana_scoring_plugin.cc  light_buoy_plugin.cc  navigation_scoring_plugin.cc  perception_scoring_plugin.cc  placard_plugin.cc  scan_dock_scoring_plugin.cc  scoring_plugin.cc  stationkeeping_scoring_plugin.cc  wayfinding_scoring_plugin.cc  waypoint_markers.cc  wildlife_scoring_plugin.cc
aimm_gazebo/test/: sandisland.cc  sandisland.test
aimm_gazebo/worlds/: example_course.world.xacro  gymkhana.world.xacro  high_populated_world.world  medium_populated_world.world  ocean_world.xacro  perception_task.world.xacro  scan_dock_deliver.world.xacro  stationkeeping_task.world.xacro  sydneyregatta.world.xacro  sydneyregatta.xacro  wayfinding_task.world.xacro  wildlife_task.world.xacro
ainstein_radar/ainstein_radar/: package.xml
autonomy_boat/: package.xml
autonomy_boat/World/: E.yaml
autonomy_boat/config/: aimm.urdf
autonomy_boat/launch/: RAITE.launch  localization_example.launch  rviz_aimm.launch  rviz_example.launch  usv_bringup.launch  view_robot.launch
autonomy_boat/rviz/: jackal_test.rviz  launch.rviz
config/: amcl.yaml  ekf.yaml  map_server_params.yaml  nav2_params.yaml  navsat.yaml  pc_to_scan.yaml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
launch/: amcl.launch(incomplete).py  display.launch.py  display.launch_old.py  localization_launch.py  map_server.launch.py  nav2_bringup.launch.py  ouster.launch.py  view_robot.launch.py
lpv_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
lpv_description/models/LPV-4-Base/mesh/: LPV-4-Base.dae
lpv_description/models/LPV-Base/mesh/: lpv_base.stl
lpv_description/models/aimm-base/: model.sdf
lpv_description/models/engine/mesh/: engine.dae
lpv_description/models/propeller/mesh/: propeller.dae
lpv_description/urdf/: battery.xacro  cpu_cases.xacro  lpv_base.urdf.xacro
lpv_description/urdf/thrusters/: engine.xacro
lpv_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
lpv_gazebo/config/: rviz_aimm.rviz
lpv_gazebo/launch/: localization_example.launch  rviz_aimm.launch
lpv_gazebo/urdf/: lpv_gazebo.urdf.xacro  lpv_gazebo.xacro  macros.xacro
lpv_gazebo/urdf/components/: ball_shooter.xacro  lidar.xacro  lpv_3d_lidar.xacro  lpv_camera.xacro  lpv_gps.xacro  lpv_imu.xacro  lpv_p3d.xacro  lpv_pinger.xacro  lpv_planar_lidar.xacro  lpv_radar.xacro
lpv_gazebo/urdf/dynamics/: lpv_gazebo_dynamics_plugin.xacro
lpv_gazebo/urdf/thruster_layouts/: lpv_aft_thrusters.xacro  lpv_gazebo_thruster_config.xacro  lpv_t_thrusters.xacro  lpv_z_thrusters.xacro  wamv_x_thrusters.xacro
maps/: E.yaml
rviz/: aimm.rviz  bringup.rviz
src/aimm_gazebo_plugins/: CMakeLists.txt  package.xml
src/autonomy_boat/: CMakeLists.txt
tools/: code_check.sh
urdf/: aimm.urdf
usv_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
usv_msgs/: package.xml
wave_gazebo/: CHANGELOG.rst  CHANGELOG.text  CMakeLists.txt  package.xml
wave_gazebo/config/: lpv_wave.perspective
wave_gazebo/launch/: ocean_demos.launch  ocean_world_buoys.launch  wave_lpv.launch
wave_gazebo_plugins/: package.xml
wave_gazebo_plugins/src/: WavefieldModelPlugin.cc
(+320 files in other folders)
