<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aimm_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aimm@todo.todo">aimm</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_localization</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
